# paper-rs

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  Makefile  README.md  build.gradle.kts  cbindgen.toml  gradle.properties  settings.gradle.kts
disco-core/: Cargo.toml
disco-core/src/: lib.rs
disco-ffi/: Cargo.toml
disco-ffi/src/: lib.rs
disco-plugin/: Cargo.toml  build.gradle.kts
disco-plugin/src/: lib.rs
disco-plugin/src/main/java/io/disco/plugin/: DiscoPlugin.java  HelloCommand.java  RustEventExecutor.java  SheepListener.java
disco-plugin/src/main/resources/: plugin.yml
docs/: TODO.md
docs/design/: 01-framework-choice.md
paper/: Cargo.toml
paper-loader/: Cargo.toml
paper-loader/src/: lib.rs  logger.rs
paper-rs/: Cargo.toml
paper-rs/src/: lib.rs
paper-shim/: build.gradle.kts
paper-shim/src/main/java/io/papermc/: NativeLoader.java  RustCommand.java  RustPlugin.java
paper-shim/src/main/java/io/paperrs/shim/: Dialogs.java  LogUpcall.java  NativeLoader.java  PaperFfiLogger.java  PaperRs.java  RustCommand.java  RustDialogActionCallback.java  RustEventExecutor.java
paper/src/: api.rs  builder.rs  callbacks.rs  core_init.rs  ctx.rs  dispatch.rs  ffi.rs  jobject_repr.rs  lib.rs  logger.rs  plugin_init.rs  registration.rs
paper/src/bukkit/: audience.rs  command_sender.rs  component.rs  dye_color.rs  key.rs  mini_message.rs  mod.rs
paper/src/bukkit/dialog/: action_button.rs  click_callback.rs  dialog.rs  dialog_action.rs  dialog_after_action.rs  dialog_base.rs  dialog_body.rs  dialog_type.rs  mod.rs
paper/src/bukkit/entity/: mod.rs  player.rs  sheep.rs
paper/src/bukkit/event/: entity_damage_by_entity_event.rs  mod.rs  player_interact_entity_event.rs
papermc/: Cargo.toml
papermc-loader/: Cargo.toml
papermc-loader/src/: lib.rs  logger.rs
papermc/src/: api.rs  builder.rs  callbacks.rs  ctx.rs  dispatch.rs  ffi.rs  jobject_repr.rs  lib.rs  logger.rs  macros.rs  plugin.rs  plugin_init.rs  registration.rs  setup_api.rs  util.rs
papermc/src/bukkit/: audience.rs  command_sender.rs  dye_color.rs  mini_message.rs
papermc/src/bukkit/dialog/: click_callback.rs  dialog.rs  dialog_action.rs  dialog_after_action.rs  dialog_base.rs
papermc/src/bukkit/entity/: mod.rs  player.rs  sheep.rs
papermc/src/bukkit/event/: entity_damage_by_entity_event.rs  mod.rs  player_interact_entity_event.rs
papermc/src/main/java/io/papermc/: Dialogs.java  NativeLoader.java  RustDialogActionCallback.java  RustEventExecutor.java  RustPlugin.java  RustReloadablePlugin.java  RustTracingSubscriber.java
