[package]
name = "paper-loader"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
arc-swap.workspace = true
jni.workspace = true
libloading.workspace = true
paper.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lib]
crate-type = ["cdylib"]
