[package]
name = "paper"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
eyre.workspace = true
jni.workspace = true
jni-sys.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lib]
crate-type = ["rlib"]
